deploy/resources/not_tested/niche-api-vs-retry-timeout.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: niche-api
spec:
  hosts:
    - niche-api
  gateways:
    - mesh
  http:
  - route:
    - destination:
        host: niche-api
        subset: v1
      weight: 50
    - destination:
        host: niche-api
        subset: v2
      weight: 50
      retries:
        attempts: 3
        perTryTimeout: 2s
      timeout: 10s
